--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "concurrently \"npm run watch\" \"nodemon index.js\"",
+    "compile": "tsc",
+    "watch": "tsc -w"
   },
   "author": "thiago",
   "license": "ISC",
@@ -16,6 +18,9 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/node": "^17.0.21",
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.6.2"
   }
 }
